--- a/dataset_analysis.ipynb
+++ b/dataset_analysis.ipynb
@@ -11389,6 +11389,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Check for normality and for statistically relevant differences"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 291,
    "metadata": {},
